--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,4 +4,8 @@
 @import "vendor/libs";
 @import "base/fonts";
 @import "base/general";
+@import "base/form-input";
+@import "base/form-button";
+@import "base/form-checkbox";
+@import "base/box-hide";
 @import "../blocks/modules";
