--- a/src/views/devices.html
+++ b/src/views/devices.html
@@ -34,12 +34,12 @@
             <h1>EVO controls</h1>
             <ul>
                 <li><a href="/login.html">Вход</a></li>
-                <li><a href="/devices.html">Устройства</a></li>
             </ul>
         </div>
     </div>
     @@include("../blocks/modules/footer/footer.html")
     <script src="js/main.js"></script>
+    <script src="js/vendor.js"></script>
 </body>
 
 </html>
