--- a/src/views/login.html
+++ b/src/views/login.html
@@ -28,7 +28,6 @@
 </head>
 
 <body>
-    @@include("../blocks/modules/header/header.html")
     <div class="login-page">
         <div class="login-page__wrap">
             <div class="login-page__wrap-col">
@@ -51,12 +50,27 @@
                                 <input name="login" type="password">
                             </label>
                         </div>
+                        <!-- Неправильный логин или пароль .error -->
+                        <div class="form-input error" style="display: none;">
+                            <label>
+                                <span class="form-input__label">Логин</span>
+                                <input name="login" value="Введён неправильный логин пароль " type="text" autocomplete="off">
+                                <span class="error__item">Неправильный логин или пароль</span>
+                            </label>
+                        </div>
+                        <!-- Неправильный логин или пароль -->
+                        <button class="form-button">Войти</button>
+                        <div class="form-checkbox">
+                            <label>
+                                <input type="checkbox">
+                                <span>Запомнить</span>
+                            </label>
+                        </div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
-    @@include("../blocks/modules/footer/footer.html")
     <script src="js/main.js"></script>
 </body>
 
