--- a/src/blocks/modules/login-page/login-page.scss
+++ b/src/blocks/modules/login-page/login-page.scss
@@ -25,10 +25,20 @@ $pfx: "login-page";
 
     &__form {
         text-align: center;
+        width: 315px;
+        max-width: 100%;
+
+        .form-button {
+            margin-top: 35px;
+        }
+
+        .form-checkbox {
+            margin-top: 15px;
+        }
     }
-    
+
     &__title {
-        margin: 40px 0;
+        margin: 30px 0 40px 0;
         font-weight: normal;
         font-size: 20px;
         letter-spacing: 0.5px;
