--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -3,12 +3,21 @@ $pfx: "header";
 .#{$pfx} {
     padding: 0px 40px;
     box-shadow: 0px 4px 20px rgba(122, 128, 131, 0.17);
+    background: white;
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0; 
 
     &__wrap {
         display: flex;
         align-items: center;
+        justify-content: space-between;
 
         &-col {
+            display: flex;
+            align-items: center;
+
             &:nth-of-type(1) {
                 display: flex;
                 margin-right: 12px;
@@ -17,7 +26,6 @@ $pfx: "header";
             &:nth-of-type(2) {
                 margin-right: 12px;
             }
-
         }
     }
 
@@ -146,6 +154,7 @@ $pfx: "header";
     &__lang {
         color: $gray;
         position: relative;
+        margin-right: 20px;
 
         &-parrent {
             cursor: pointer;
@@ -180,6 +189,37 @@ $pfx: "header";
                 path {
                     fill: $text;
                 }
+            }
+        }
+    }
+
+    &__setting {
+        margin-right: 20px;
+    }
+
+    &__user {
+        display: flex;
+        align-items: center;
+
+        &-img {
+            border-radius: 8px;
+            height: 44px;
+            width: 44px;
+            display: block;
+        }
+
+        &_text {
+            margin-left: 12px;
+            display: flex;
+            flex-direction: column;
+            font-size: 14px;
+
+            &-name {
+                font-weight: bold;
+            }
+
+            &-prof {
+                color: #636478;
             }
         }
     }
