Заголовок, Переключатель вида, скачивание док-та, карточка товара

--- a/src/blocks/_modules.scss
+++ b/src/blocks/_modules.scss
@@ -1,3 +1,6 @@
 @import "modules/header/header";
 @import "modules/footer/footer";
 @import "modules/login-page/login-page";
+@import "modules/btn-group/btn-group";
+@import "modules/export/export";
+@import "modules/product/product";
