--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,4 @@
 @import "base/form-checkbox";
 @import "base/box-hide";
 @import "../blocks/modules";
+@import "../../node_modules/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar";
