--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -7,7 +7,8 @@ $pfx: "header";
     position: fixed;
     left: 0;
     top: 0;
-    right: 0; 
+    right: 0;
+    z-index: 100;
 
     &__wrap {
         display: flex;
