--- a/src/blocks/modules/table-list/table-rezerv.scss
+++ b/src/blocks/modules/table-list/table-rezerv.scss
@@ -17,7 +17,10 @@
     }
 
     &__banner {
-        background: $accent;
+        background-color: $accent;
+        background-image: url(/img/svg/circles.svg);
+        background-size: 125%;
+        background-position: center;
         border-radius: 9px;
         color: white;
         padding: 32px 29px;
